[package]
name = "biskuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.10.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.0"

[lib]
doc = false
